# cookiecutter-pipproject

./: .gitignore  README.md  cookiecutter.json  tasks.py
.github/workflows/: test-template.yml
tests/: test_template.py
{{cookiecutter.app_name}}/: .gitignore  CHANGELOG.md  LICENSE.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
{{cookiecutter.app_name}}/.github/: pull_request_template.md
{{cookiecutter.app_name}}/.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  3-documentation.yml  config.yml
{{cookiecutter.app_name}}/.github/workflows/: docs.yml  publish.yml  test-docs.yml  test.yml
{{cookiecutter.app_name}}/docs/: make.bat
{{cookiecutter.app_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.app_name}}/tests/: __init__.py  test_sample.py
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/: __init__.py
